--- a/index.html
+++ b/index.html
@@ -43,13 +43,41 @@
 
         <div class="section-first-container">
 
-            <div class="inner-section-container"></div>
+            <div class="inner-section-container">
+
+                <div class="title-section-container">
+
+                    <p class="title-section-1">
+                        Beyond Traditional Testing,<br>
+
+                        Measure What Really Matters</p>
+
+                </div>
+
+                <div class="description-smoll-words-title">
+                    <p>Life simulation–based assessment that tracks 18 critical <br> competencies through authentic
+                        decision-making, not surveys.</p>
+                </div>
+
+
+                <div class="button-changes-container">
+
+                    <button class="become-change-btn">Become a ChangeMaker</button>
+                    <button class="how-this-works-btn">How this works?</button>
+
+                </div>
+
+            </div>
+
+
             <div class="inner-section-image">
                 <img class="image-fit-content" src="image/first-section-image.png" alt="">
             </div>
 
 
         </div>
+
+        <div class="section-second-container"></div>
 
 
     </div>
