--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@
 
         </div>
 
-        <div class="section-second-container"></div>
+        <div class="section-second-container">
+
+            <p class="reallives-change-text">RealLives ChangeMaker Index Features</p>
+
+            <div class="index-features-container">
+
+                <div class="image-features-section"></div>
+
+
+            </div>
+
+        </div>
 
 
     </div>
