--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 
             <div class="index-features-container">
 
-                <div class="image-features-section"></div>
+                <div class="image-features-section">
+                    <img class="image-fit-content " src="image/section-image.png" alt="">
+                </div>
 
 
             </div>
