--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="icon" type="image/svg+xml" href="image/logo.svg" />
     <link rel="stylesheet" href="css/style.css">
     <title>RealLives Foundation</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
+
+
 
 <body>
 
@@ -83,8 +86,294 @@
 
             <div class="index-features-container">
 
-                <div class="image-features-section">
-                    <img class="image-fit-content " src="image/section-image.png" alt="">
+                <div class="icon-features-section-container">
+
+                    <div class="four-grid-container">
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/airplane-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">Students Simulate</p>
+                        </div>
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/chart-line-up-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">Decisions Tracked</p>
+                        </div>
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/Clipboard.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">Insights Delivered</p>
+                        </div>
+
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/lightning-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">AI Guidance</p>
+                        </div>
+
+                    </div>
+
+
+                    <div class="four-grid-container">
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/book-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">Actionable Reports</p>
+                        </div>
+
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/user-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">Personal Growth</p>
+                        </div>
+
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/globe-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">Globally Contextualized</p>
+                        </div>
+
+
+                        <div class="box-card-data">
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/target-duotone.svg" alt="">
+                            </div>
+
+                            <p class="title-of-card">18 ChangeMaker Competencies</p>
+                        </div>
+
+
+                    </div>
+
+
+                    <p class="description-features-bottom">Discover how the ChangeMaker Index turns your life choices
+                        into insights, tracking growth, <br>
+                        guiding decisions, and unlocking your potential as a global ChangeMaker.</p>
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <div class="changes-maker-section-index">
+
+
+            <P class="experience-text-reallives">Experience RealLives ChangeMaker Index</P>
+
+            <div class="rcmi-embed-cdn">
+                <iframe class="iframe-width width-100"
+                    src="https://demo.arcade.software/i527E8HZo4YlXdSC8arb?embed&amp;embed_mobile=tab&amp;embed_desktop=inline&amp;show_copy_link=true"
+                    frameborder="0"></iframe>
+            </div>
+        </div>
+
+        <div class="impact-section-container">
+
+            <p class="experience-text-reallives">Our Impact</p>
+
+            <div class="inforamtion-card-container">
+
+                <div class="card-info-container">
+
+                    <div class="card-info-box">
+
+                        <div class="university-image-box">
+                            <img class="image-fit-cover" src="image/Final Business with Purpose 1 1.png" alt="">
+                        </div>
+
+                        <div class="content-data-text-box">
+                            <p class="title-university-name">ETH Zurich, Switzerland</p>
+
+                            <p class="description-university-text">Students explored global life scenarios in the
+                                RealLives ChangeMaking Workshop, building
+                                empathy, ethical leadership, and sustainable problem-solving skills.</p>
+                        </div>
+
+
+                    </div>
+
+                    <div class="card-info-box">
+
+                        <div class="university-image-box">
+                            <img class="image-fit-cover" src="image/fourth_workshop-1-min 1.png" alt="">
+                        </div>
+
+                        <div class="content-data-text-box">
+                            <p class="title-university-name">IIT Bombay, India</p>
+
+                            <p class="description-university-text">Through simulation-based experiences, students
+                                connected technology, society, and values, learning how empathy-driven choices can drive
+                                social impact.</p>
+                        </div>
+
+
+                    </div>
+
+                    <div class="card-info-box">
+
+                        <div class="university-image-box">
+                            <img class="image-fit-cover" src="image/second-workshop-3 1.png" alt="">
+                        </div>
+
+                        <div class="content-data-text-box">
+                            <p class="title-university-name">Navamindradhiraj University, Thailand</p>
+
+                            <p class="description-university-text">Students participated in an immersive ChangeMaker
+                                program, gaining insights into social responsibility, ethical decision-making, and the
+                                impact of choices on communities.</p>
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+                <div class="btn-larne-more">
+
+                    <a href="">
+
+                        <button class="inner-btn">
+                            Learn More
+                            <i class="ri-arrow-right-line"></i>
+                        </button>
+
+
+                    </a>
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <div class="container-benifit-school">
+
+            <p class="benifit-title-text">Benefits for Schools</p>
+
+            <div class="benifit-box-school-container">
+
+                <div class="benifit-cards-box">
+
+                    <div class="top-benfit-header">
+
+                        <div class="icon-card">
+                            <img class="image-fit-content" src="image/student-duotone 1.svg" alt="">
+                        </div>
+
+                        <p class="header-title-side-text">Empower Every Student to Grow Beyond Academics</p>
+
+                    </div>
+
+                    <div class="bottom-data-benifit">
+
+                        <p class="bottom-data-benifit-description">RealLives helps schools go beyond test scores by
+                            making social, emotional, and ethical growth
+                            visible and measurable. Through immersive life simulations, students experience real-world
+                            situations that build empathy, resilience, and responsible decision making — all key to
+                            future readiness.</p>
+
+                    </div>
+
+                </div>
+
+
+                <div class="benifit-cards-box">
+
+                    <div class="top-benfit-header">
+
+                        <div class="icon-card">
+                            <img class="image-fit-content" src="image/chalkboard-teacher-duotone 1.svg" alt="">
+                        </div>
+
+                        <p class="header-title-side-text">Data Driven Insights for Educators</p>
+
+                    </div>
+
+                    <div class="bottom-data-benifit">
+
+                        <p class="bottom-data-benifit-description">
+                            The ChangeMaker Index converts every student’s in-game choices into actionable insights on
+                            mindset and behavior. Educators gain clear visibility into how learners approach challenges,
+                            collaborate, and develop leadership, enabling targeted mentoring and personalized learning
+                            strategies.
+                        </p>
+                    </div>
+
+                </div>
+
+
+                <div class="benifit-cards-box">
+
+                    <div class="top-benfit-header">
+
+                        <div class="icon-card">
+                            <img class="image-fit-content" src="image/backpack-duotone 1.svg" alt="">
+                        </div>
+
+                        <p class="header-title-side-text">Seamless Integration with School Goals</p>
+
+                    </div>
+
+                    <div class="bottom-data-benifit">
+
+                        <p class="bottom-data-benifit-description">
+                            RealLives aligns effortlessly with SEL frameworks, global citizenship programs, and
+                            competency-based learning objectives. Schools can map student progress against 18
+                            ChangeMaker competencies, turning intangible values like compassion and integrity into
+                            trackable growth metrics.
+                        </p>
+
+                    </div>
+
+                </div>
+
+
+                <div class="benifit-cards-box">
+
+                    <div class="top-benfit-header">
+
+                        <div class="icon-card">
+                            <img class="image-fit-content" src="image/users-three-duotone 1.svg" alt="">
+                        </div>
+
+                        <p class="header-title-side-text">Build a Culture of Reflection and Purpose</p>
+
+                    </div>
+
+                    <div class="bottom-data-benifit">
+
+                        <p class="bottom-data-benifit-description">
+                            By helping students see the impact of their decisions, schools nurture reflective learners
+                            and socially aware citizens. The platform cultivates a community of ChangeMakers —
+                            confident, empathetic individuals ready to lead with purpose in their communities and the
+                            world.
+                        </p>
+                    </div>
+
                 </div>
 
 
@@ -93,7 +382,43 @@
         </div>
 
 
+        <footer class="footer-container">
+
+            <div class="footer-section-1">
+
+                <div class="left-side-bar">
+
+                    <div class="logo-change">
+                        <img class="image-fit-cover" src="image/logo.svg" alt="">
+                    </div>
+
+                    <span class="border-right-index">
+
+                        <p class="changemaker-text">ChangeMaker Index</p>
+
+                    </span>
+
+
+                </div>
+
+                <div class="footer-descritpion-text">
+                    RCMI empowers students worldwide to build empathy, ethical thinking, and social responsibility
+                    through immersive life simulations. By navigating realistic scenarios and reflecting on their
+                    decisions, students develop the skills and mindset to create meaningful, positive impact in their
+                    communities and beyond.
+                </div>
+
+            </div>
+            <div class="footer-section-2"></div>
+
+        </footer>
+
     </div>
+
+
+
+
+
 
 
 </body>
