added spacing and padding, plus updated some font sizes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="right-side-bar">
-                <a class="navigation-text-style " href="">For Students</a>
+                <a class="navigation-text-style " href="">Best Suited For</a>
                 <a class="navigation-text-style " href="">About RCMI</a>
                 <a class="navigation-text-style " href="">Our Impact</a>
                 <a class="navigation-text-style " href="">Contact Us</a>
