--- a/index.html
+++ b/index.html
@@ -409,7 +409,49 @@
                 </div>
 
             </div>
-            <div class="footer-section-2"></div>
+
+            <div class="footer-section-2">
+
+                <div class="label-footer-button-box">
+
+                    <p class="text-footer-label">Who we cater</p>
+
+                    <span class="footer-child-container">
+                        <a class="footer-ankar-style" href="">For Institutions</a>
+                        <a class="footer-ankar-style" href="">For Parents</a>
+                        <a class="footer-ankar-style" href="">For Employers</a>
+
+                    </span>
+
+                </div>
+
+
+                <div class="label-footer-button-box">
+
+                    <p class="text-footer-label">Get to Know</p>
+
+                    <span class="footer-child-container">
+                        <a class="footer-ankar-style" href="">About RCMI</a>
+                    </span>
+
+                </div>
+
+
+                <div class="label-footer-button-box">
+
+                    <p class="text-footer-label">Support</p>
+
+                    <span class="footer-child-container">
+                        <a class="footer-ankar-style" href="">Contact Us</a>
+
+                    </span>
+
+                </div>
+
+
+
+
+            </div>
 
         </footer>
 
