--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>RealLives Foundation</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+
 </head>
 
 
@@ -35,7 +37,37 @@
             </div>
 
             <div class="right-side-bar">
-                <a class="navigation-text-style " href="">Best Suited For</a>
+
+                <div class="dropdown">
+                    <button class="dropbtn navigation-text-style">
+                        Best Suited For
+                        <span class="arrow"><i class="ri-arrow-down-s-line"></i></span>
+                    </button>
+
+                    <div class="dropdown-content">
+
+                        <span class="span-flex-style">
+
+
+                            <a class="navigation-text-style dropdown-border " href="">
+                                For Institutions
+                            </a>
+
+                            <a class="navigation-text-style dropdown-border " href="">For Employers</a>
+
+                            <a class="navigation-text-style " href="">For Parents</a>
+
+
+                        </span>
+
+
+
+                    </div>
+                </div>
+
+
+                <!-- <a class="navigation-text-style " href="">Best Suited For</a> -->
+
                 <a class="navigation-text-style " href="">About RCMI</a>
                 <a class="navigation-text-style " href="">Our Impact</a>
                 <a class="navigation-text-style " href="">Contact Us</a>
