--- a/index.html
+++ b/index.html
@@ -441,10 +441,10 @@
                         <div class="top-benfit-header">
 
                             <div class="icon-card">
-                                <img class="image-fit-content" src="image/student-duotone 1.svg" alt="">
+                                <img class="image-fit-content" src="image/chart-polar-duotone 1.svg" alt="">
                             </div>
 
-                            <p class="header-title-side-text">Empower Every Student to Grow Beyond Academics</p>
+                            <p class="header-title-side-text">What is RCMI?</p>
 
                         </div>
 
@@ -472,18 +472,187 @@
                     </div>
 
 
+                    <div class="tow-box-rcmi">
 
 
-                    <div class="tow-box-rcmi"></div>
+                        <div class="top-benfit-header">
+
+                            <div class="icon-card">
+                                <img class="image-fit-content" src="image/key-duotone 2.svg" alt="">
+                            </div>
+
+                            <p class="header-title-side-text">Key Features</p>
+
+                        </div>
+
+
+                        <div class="bottom-data-benifit flex-colume-what-rcmi">
+
+                            <p class="rcmi-info-data-text">
+                                <span class="title-description-mid"> Powered by RealLives Simulation : </span>
+                                An award-winning, immersive life
+                                simulation that allows individuals to experience decision-making in realistic scenario
+                            </p>
+
+
+                            <p class="rcmi-info-data-text">
+
+                                <span class="title-description-mid">AI-Powered Score Generation : </span>
+
+                                Advanced algorithms analyze performance across all competencies to generate accurate,
+                                personalized insights.
+                            </p>
+
+
+                            <p class="rcmi-info-data-text">
+
+                                <span class="title-description-mid">Global Recognition : </span>
+
+                                Developed in partnership with leading institutions
+                                including Korea University
+
+                            </p>
+
+                        </div>
+
+
+
+                    </div>
 
 
                 </div>
 
 
-                <div class="rcmi-data-right-bar"></div>
+                <div class="rcmi-data-right-bar">
+
+                    <div class="top-benfit-header">
+
+                        <div class="icon-card">
+                            <img class="image-fit-content" src="image/atom-duotone 2.svg" alt="">
+                        </div>
+
+                        <p class="header-title-side-text">The Science behind RCMI</p>
+
+                    </div>
+
+
+                    <div class="bottom-data-benifit flex-colume-what-rcmi">
+
+                        <p class="rcmi-info-data-text">
+                            The RCMI Index is built on a robust foundation of psychometric research, educational theory,
+                            and data-driven insights. The assessment framework was developed through collaboration
+                            between the RealLives Foundation and Korea University, combining expertise in:
+                        </p>
+
+
+                        <p class="rcmi-info-data-text">
+
+                            <span class="title-description-mid">Experiential Learning Theory: </span>
+
+                            Learning through realistic simulation and decision-making
+
+                        </p>
+
+
+                        <p class="rcmi-info-data-text">
+                            <span class="title-description-mid">Competency-Based Education: </span>
+                            Focus on skills and abilities rather than just knowledge
+                        </p>
+
+                        <p class="rcmi-info-data-text">
+                            <span class="title-description-mid">
+                                Social Impact Research:</span>
+                            Understanding the competencies that drive meaningful change
+
+                        </p>
+
+                        <p class="rcmi-info-data-text">
+                            <span class="title-description-mid">
+                                Positive Psychology: </span>
+                            Emphasis on strengths-based development
+                        </p>
+
+
+                        <p class="rcmi-info-data-text">
+                            The RealLives simulation provides a unique assessment environment where individuals make
+                            decisions that aﬀect a simulated life, revealing their natural competencies in areas such as
+                            problem-solving, empathy, ethical reasoning, and global awareness.
+                        </p>
+
+
+                    </div>
+                </div>
 
             </div>
 
+            <div class="how-to-works-rcmi-container">
+
+                <div class="how-to-works-rcmi-container-inner">
+
+                    <p class="first-title-how-to-work">How the RealLives ChangeMaker Index Works?</p>
+
+
+                    <div class="container-event-main">
+
+                        <div class="container-inner-child-left">
+
+                            <p class="title-game-event">Step 1: Making a Real-Life Decision</p>
+
+                            <p class="description-game-title">Every player faces life-like situations and must choose
+                                what to do.These choices depend
+                                on your character’s unique life — their family background, income level, job, and more.
+                                Just like in real life, every decision shapes who you become.
+                            </p>
+
+                        </div>
+
+
+                        <div class="container-inner-child-right ">
+
+                            <div class="event-right-game-container">
+
+                                <img class="image-fit-content " src="image/RealLives ChangeMaker Index 1.svg" alt="">
+
+                            </div>
+
+
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="container-event-main">
+
+                        <div class="container-inner-child-left">
+
+                            <p class="title-game-event">Step 2: Measuring Competencies</p>
+
+                            <p class="description-game-title">
+                                Each choice reflects different mindsets and skills.When you decide, our system
+                                automatically updates your character’s competencies based on your choice.
+                            </p>
+
+                        </div>
+
+
+                        <div class="container-inner-child-right ">
+
+                            <div class="event-right-game-container">
+
+                                <img class="image-fit-content " src="image/RealLives ChangeMaker Index-2.svg" alt="">
+
+                            </div>
+
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
 
         </div>
 
