--- a/index.html
+++ b/index.html
@@ -644,15 +644,144 @@
 
                             </div>
 
+                        </div>
 
+
+                    </div>
+
+
+                    <div class="container-event-main">
+
+                        <div class="container-inner-child-left">
+
+                            <p class="title-game-event">Step 3: Building the ChangeMaker Index</p>
+
+                            <p class="description-game-title">
+                                Let’s say you chose A — “Make the journey and bring back the water.”
+                                Our proprietary
+                                algorithm analyzes the intent and impact of that choice and updates your ChangeMaker
+                                Index,
+                                showing how your empathy, resilience, and decision-making evolve over time.
+                            </p>
+
+
+
+                        </div>
+
+                        <div class="container-inner-child-right ">
+
+                            <div class="event-right-game-container">
+
+                                <img class="image-fit-content " src="image/therd-changemaker-image.svg" alt="">
+
+                            </div>
 
                         </div>
 
                     </div>
 
+                    <div class="container-event-main">
+
+                        <div class="container-inner-child-left">
+
+                            <p class="title-game-event">Step 4 — View Your ChangeMaker Graph</p>
+
+                            <p class="description-game-title">
+                                Watch your personal ChangeMaker journey come alive!The ChangeMaker Graph visualizes your
+                                progress across 18 ChangeMaker Competencies
+                            </p>
+
+                            <p class="description-game-title">
+
+                                Each new decision updates your graph, showing where you’re growing, and where you can
+                                grow
+                                next.
+                            </p>
+
+                        </div>
+
+                        <div class="container-inner-child-right background-white padding-0 ">
+
+                            <div class="event-right-game-container background-white  border-game-color ">
+
+                                <img class="image-fit-content " src="image/graph-rcmi-image.svg" alt="">
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="container-event-main">
+
+                        <div class="container-inner-child-left">
+
+                            <p class="title-game-event">Step 5 — Discover Your ChangeMaker Clusters</p>
+
+                            <p class="description-game-title">
+                                Your overall ChangeMaker Score is built from four powerful clusters, each combining
+                                multiple competencies you develop through your decisions:
+                            </p>
+
+
+                            <p class="description-game-title">
+                                <span class="title-tag-rcmi">1 Internal / Personal Qualities – </span>
+                                How you grow as an individual:Self-Awareness, Resilience,
+                                Adaptability, Persistence, Emotional Intelligence
+                            </p>
+
+
+                            <p class="description-game-title">
+                                <span class="title-tag-rcmi"> 2 Interpersonal Competencies – </span>
+                                How you grow as an individual:Self-Awareness, Resilience, Adaptability, Persistence,
+                                Emotional Intelligence
+                            </p>
+
+                            <p class="description-game-title">
+                                <span class="title-tag-rcmi">3 Strategic Thinking – </span>
+                                How you plan, solve problems, and innovate: Visionary Thinking, Creativity & Innovation,
+                                Problem-Solving Skills, Initiative, Risk-Taking, Critical Thinking
+                            </p>
+
+                            <p class="description-game-title">
+                                <span class="title-tag-rcmi">4 Contextual Awareness – </span>
+                                How you understand the wider world and act responsibly: Global Awareness, Ethical
+                                Responsibility
+
+                            </p>
+
+                            <p class="description-game-title">
+                                Together, these clusters show how your choices build personal growth, social impact,
+                                strategic capability, and responsible citizenship — giving a holistic view of
+                                your ChangeMaker potential.
+
+                            </p>
+
+                        </div>
+
+                        <div class="container-inner-child-right background-white padding-0 ">
+
+                            <div class="event-right-game-container ">
+
+                                <img class="image-fit-content " src="image/Comptencies-ss-image.svg" alt="">
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+
+
                 </div>
 
             </div>
+
+
+            <!-- <div class="changemaker-journey-container"></div> -->
+
 
         </div>
 
