--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@
                         </div>
 
 
-                        <div class="container-inner-child-right ">
+                        <div class="container-inner-child-right backgroudn-none-color  ">
 
-                            <div class="event-right-game-container">
+                            <div class="">
 
                                 <img class="image-fit-content " src="image/RealLives ChangeMaker Index-1.svg" alt="">
 
@@ -636,9 +636,9 @@
                         </div>
 
 
-                        <div class="container-inner-child-right ">
+                        <div class="container-inner-child-right backgroudn-none-color ">
 
-                            <div class="event-right-game-container">
+                            <div class="event-right-game-container backgroudn-none-color">
 
                                 <img class="image-fit-content " src="image/RealLives ChangeMaker Index-2.svg" alt="">
 
@@ -664,15 +664,13 @@
                                 showing how your empathy, resilience, and decision-making evolve over time.
                             </p>
 
-
-
                         </div>
 
-                        <div class="container-inner-child-right ">
+                        <div class="container-inner-child-right backgroudn-none-color ">
 
-                            <div class="event-right-game-container">
+                            <div class="event-right-game-container backgroudn-none-color ">
 
-                                <img class="image-fit-content " src="image/therd-changemaker-image.svg" alt="">
+                                <img class="image-fit-content " src="image/make-a-changemaker-journey.svg" alt="">
 
                             </div>
 
@@ -772,15 +770,30 @@
 
                     </div>
 
-
-
-
                 </div>
 
             </div>
 
 
-            <!-- <div class="changemaker-journey-container"></div> -->
+            <div class="changemaker-journey-container">
+
+                <div class="child-changemaker-container">
+
+                    <div class="top-child-changemaker">
+                        <p class="text-changemaker-journey">The ChangeMaker Journey</p>
+                        <p class="changemaker-devlopement-text">The Five Stages of ChangeMaker Development</p>
+                        <p class="changemaker-devlopment-text"> The RCMI Index places individuals on a developmental
+                            journey with five distinct
+                            stages, each representing a level of changemaking capacity:
+                        </p>
+
+
+
+                    </div>
+
+                </div>
+
+            </div>
 
 
         </div>
