--- a/index.html
+++ b/index.html
@@ -791,7 +791,106 @@
 
                     </div>
 
+                    <div class="changemaker-journey-background-image">
+                        <img class="image-fit-content" src="image/changemaker-journey-image.svg" alt="">
+                    </div>
+
+
+                    <div class="point-cards-container">
+
+
+                        <div class="point-cards-inner first-box-point ">
+
+                            <p class="stage-title-text">Stage 1: Seed</p>
+
+                            <p class="stage-title-2">"Just beginning to explore your potential"</p>
+
+                            <p class="stage-description-text">At the Seed stage, individuals are at the very beginning
+                                of their changemaking journey.
+                                They are discovering their interests, starting to understand their strengths, and
+                                beginning to develop foundational competencies.</p>
+
+                        </div>
+
+                        <div class="point-cards-inner second-box-point ">
+
+                            <p class="stage-title-text">Stage 2: Sprout</p>
+
+                            <p class="stage-title-2">"Starting to develop foundational skills"</p>
+
+                            <p class="stage-description-text">
+                                At the Sprout stage, individuals are actively developing their competencies and
+                                beginning to see growth in specific areas. They are building confidence and starting to
+                                take initiative.
+                            </p>
+
+
+                        </div>
+
+
+                        <div class="point-cards-inner therd-box-point ">
+
+                            <p class="stage-title-text">Stage 3: Sapling</p>
+
+                            <p class="stage-title-2">"Growing stronger with a mix of strengths and growth areas"</p>
+
+                            <p class="stage-description-text">
+                                At the Sapling stage, individuals have developed a solid foundation of competencies
+                                with clear strengths emerging. They are actively working on areas for improvement
+                                while leveraging their strengths.
+                            </p>
+
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="point-cards-container-2">
+
+                        <div class="point-cards-inner four-box-point ">
+
+                            <p class="stage-title-text">Stage 4: Plant</p>
+
+                            <p class="stage-title-2">"Well on your way, with a solid and balanced profile"</p>
+
+                            <p class="stage-description-text">
+                                At the Plant stage, individuals are flourishing, branching out, and making their
+                                presence felt. Their work is creating visible change, and their connections are helping
+                                their impact spread further. This is the time to protect what they've built.
+                            </p>
+
+                        </div>
+
+                        <div class="point-cards-inner five-box-point ">
+
+                            <p class="stage-title-text">Stage 5: Fruit</p>
+
+                            <p class="stage-title-2">"Thriving as a ChangeMaker, creating meaningful impact"</p>
+
+                            <p class="stage-description-text">
+                                At the Fruit stage, individuals are at the pinnacle of their changemaking capacity. They
+                                are creating significant, sustained impact and inspiring others to do the same.
+                            </p>
+
+
+                        </div>
+
+                    </div>
+
+
                 </div>
+
+            </div>
+
+
+            <div class="begin-your-changemaker-container">
+
+                <p class="make-decision-skill-text">Make decisions, grow skills, and see your impact come to life.</p>
+
+                <a class="becomechanage-maker-style" href="#">
+                    <div class="becomechanage-maker">Begin Your ChangeMaker Journey</div>
+                </a>
 
             </div>
 
