--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="image/logo.svg" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/impact.css">
     <title>RealLives Foundation</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
@@ -425,6 +426,7 @@
             </div>
 
         </div>
+
 
         <div class="about-container ">
 
@@ -898,6 +900,12 @@
         </div>
 
 
+        <div class="impact-container"> </div>
+
+
+        <div class="contact-container"></div>
+
+
         <footer class="footer-container">
 
             <div class="footer-section-1">
@@ -971,12 +979,10 @@
 
         </footer>
 
+
     </div>
 
-
-
-
-
+    <script src="js/script.js"></script>
 
 </body>
 
