tab selection changes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <nav class="navigation-bar">
 
-            <div class="left-side-bar">
+            <div class="left-side-bar" id="logo">
 
-                <div class="logo-change">
+                <div class="logo-change" >
                     <img class="image-fit-cover" src="image/logo.svg" alt="">
                 </div>
 
