--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 					<div class="container-benifit-school">
 
-						<p class="benifit-title-text">Benefits for Schools</p>
+						<p class="benifit-title-text">Benefits for Everyone</p>
 
 						<div class="benifit-box-school-container">
 
@@ -320,20 +320,13 @@
 										<img class="image-fit-content" src="image/student-duotone 1.svg" alt="">
 									</div>
 
-									<p class="header-title-side-text">Empower Every Student to Grow Beyond Academics</p>
+									<p class="header-title-side-text">Empower Yourself to Grow Beyond Academics</p>
 
 								</div>
 
 								<div class="bottom-data-benifit">
 
-									<p class="bottom-data-benifit-description">RealLives helps schools go beyond test
-										scores by
-										making social, emotional, and ethical growth
-										visible and measurable. Through immersive life simulations, students experience
-										real-world
-										situations that build empathy, resilience, and responsible decision making — all
-										key to
-										future readiness.</p>
+									<p class="bottom-data-benifit-description">RealLives helps you go beyond achievements and test scores by making social, emotional, and ethical growth visible and measurable. Through immersive life simulations, you experience real-world situations that build empathy, resilience, and responsible decision-making, all key to thriving in life and work.</p>
 
 								</div>
 
@@ -349,22 +342,14 @@
 											alt="">
 									</div>
 
-									<p class="header-title-side-text">Data Driven Insights for Educators</p>
+									<p class="header-title-side-text">Gain Deep Insights into Your Growth</p>
 
 								</div>
 
 								<div class="bottom-data-benifit">
 
 									<p class="bottom-data-benifit-description">
-										The ChangeMaker Index converts every student’s in-game choices into actionable
-										insights
-										on
-										mindset and behavior. Educators gain clear visibility into how learners approach
-										challenges,
-										collaborate, and develop leadership, enabling targeted mentoring and
-										personalized
-										learning
-										strategies.
+										The ChangeMaker Index transforms every in-game choice into meaningful insights on your mindset and behavior. It helps you understand how you approach challenges, collaborate with others, and lead with purpose, supporting self-awareness and continuous personal development.
 									</p>
 								</div>
 
@@ -379,20 +364,14 @@
 										<img class="image-fit-content" src="image/backpack-duotone 1.svg" alt="">
 									</div>
 
-									<p class="header-title-side-text">Seamless Integration with School Goals</p>
+									<p class="header-title-side-text">Seamless Integration with Your Goals </p>
 
 								</div>
 
 								<div class="bottom-data-benifit">
 
 									<p class="bottom-data-benifit-description">
-										RealLives aligns effortlessly with SEL frameworks, global citizenship programs,
-										and
-										competency-based learning objectives. Schools can map student progress against
-										18
-										ChangeMaker competencies, turning intangible values like compassion and
-										integrity into
-										trackable growth metrics.
+										RealLives aligns effortlessly with personal growth journeys, professional development paths, and lifelong learning goals. You can track your progress across 18 ChangeMaker competencies, turning qualities like compassion, integrity, and adaptability into measurable growth milestones.
 									</p>
 
 								</div>
@@ -408,22 +387,14 @@
 										<img class="image-fit-content" src="image/users-three-duotone 1.svg" alt="">
 									</div>
 
-									<p class="header-title-side-text">Build a Culture of Reflection and Purpose</p>
+									<p class="header-title-side-text">Build a Life of Reflection and Purpose </p>
 
 								</div>
 
 								<div class="bottom-data-benifit">
 
 									<p class="bottom-data-benifit-description">
-										By helping students see the impact of their decisions, schools nurture
-										reflective
-										learners
-										and socially aware citizens. The platform cultivates a community of ChangeMakers
-										—
-										confident, empathetic individuals ready to lead with purpose in their
-										communities and
-										the
-										world.
+										By revealing the impact of your decisions, RealLives encourages you to think deeply, act responsibly, and grow consciously. It nurtures a global community of ChangeMakers, empathetic, confident individuals ready to lead with purpose and create positive change in the world.
 									</p>
 								</div>
 
