--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="right-side-bar nav-links">
 
 				<div class="dropdown">
-					<button id="dropdownButton" class="dropbtn navigation-text-style nav-link active"
+					<button id="dropdownButton" class="dropbtn navigation-text-style "
 						data-target="best-suited">
 						Best Suited For
 						<span class="arrow"><i class="ri-arrow-down-s-line"></i></span>
@@ -389,7 +389,7 @@
 
 									<p class="header-title-side-text">Build a Life of Reflection and Purpose </p>
 
-								</div>
+								</div>  
 
 								<div class="bottom-data-benifit">
 
