--- a/index.html
+++ b/index.html
@@ -409,11 +409,19 @@
 
 			</div>
 
-			<div class="tab-pane section-first-container" id="institutions" style="display: none;">Institutions
-				content...</div>
-			<div class="tab-pane section-first-container" id="employers" style="display: none;">Employers content...
+			<div class="tab-pane section-first-container" id="institutions" style="display: none;">ChangeMaker for Institutions
+
+				<p class="bottom-data-benifit-description">We’re building something powerful for educators and institutions — a space to measure, nurture, and celebrate every student’s growth beyond academics. Stay tuned as we unveil how RealLives empowers schools and universities to shape tomorrow’s changemakers.</p>
 			</div>
-			<div class="tab-pane section-first-container" id="parents" style="display: none;">Parents content...</div>
+			<div class="tab-pane section-first-container" id="employers" style="display: none;">Empower Your Workforce of the Future
+
+				<p class="bottom-data-benifit-description">We’re creating a space for employers who value purpose-driven talent. Soon, you’ll see how RealLives helps organizations identify and nurture changemakers who bring empathy, innovation, and impact to work.</p>
+			</div>
+			<div class="tab-pane section-first-container" id="parents" style="display: none;">Guide the Changemakers in Your Life
+
+				<p class="bottom-data-benifit-description">We’re creating a space for parents to support their children’s growth beyond academics.
+Coming soon, resources and insights to help you understand your child, guide their decisions, and celebrate their journey as a changemaker.</p>
+			</div>
 
 
 			<div class="tab-pane about-container " id="about" style="display: none;">
