--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						</div>
 
 
-						<div class="inner-section-image">
+						<div class="inner-section image-height">
 							<img class="image-fit-content" src="image/first-section-image.png" alt="">
 						</div>
 
